force-app/main/default/objects/Test__c/fields/FLS__c.field-meta.xml
<CustomField>
    <fullName>FLS__c</fullName>
    <label>FLS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>