force-app/main/default/objects/Test__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <formula>Value1__c  +  Value2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Output</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>